{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 119,
  "lineage": "64950d9a-3a23-fb07-c79b-904f7d3cec1a",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "AzureTerraformProjectPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "AzureTerraformProjectNetworkInterfaceCard",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/networkInterfaces/AzureTerraformProject-NetworkInterfaceCard",
            "internal_domain_name_suffix": "zndtz5t115wulmy3cowe300tdc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/publicIPAddresses/AzureTerraformProject-PublicIP",
                "subnet_id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/virtualNetworks/AzureTerraformProject-VirtualNetwork/subnets/AzureTerraformProject-Subnet"
              }
            ],
            "location": "eastus",
            "name": "AzureTerraformProject-NetworkInterfaceCard",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "AzureTerraformProject-ResourceGroup",
            "tags": {
              "environment": "Azure \u0026 Terraform"
            }
          },
          "dependencies": [
            "azurerm_public_ip.AzureTerraformProjectPubIP",
            "azurerm_resource_group.AzureTerraformProjectRG",
            "azurerm_subnet.AzureTerraformProjectSubnet",
            "azurerm_virtual_network.AzureTerraformProjectVNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "AzureTerraformProjectSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/AzureTerraformProject-SecurityGroup",
            "location": "eastus",
            "name": "AzureTerraformProject-SecurityGroup",
            "resource_group_name": "AzureTerraformProject-ResourceGroup",
            "security_rule": [],
            "tags": {
              "environment": "Azure \u0026 Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.AzureTerraformProjectRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AzureTerraformPorjectRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/AzureTerraformProject-SecurityGroup/securityRules/AzureTerraformProject-SecurityRule",
            "name": "AzureTerraformProject-SecurityRule",
            "network_security_group_name": "AzureTerraformProject-SecurityGroup",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "AzureTerraformProject-ResourceGroup",
            "source_address_prefix": "99.224.57.131/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.AzureTerraformProjectSG",
            "azurerm_resource_group.AzureTerraformProjectRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "AzureTerraformProjectPubIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/publicIPAddresses/AzureTerraformProject-PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "AzureTerraformProject-PublicIP",
            "resource_group_name": "AzureTerraformProject-ResourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Azure \u0026 Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.AzureTerraformProjectRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureTerraformProjectSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/virtualNetworks/AzureTerraformProject-VirtualNetwork/subnets/AzureTerraformProject-Subnet",
            "name": "AzureTerraformProject-Subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AzureTerraformProject-ResourceGroup",
            "virtual_network_name": "AzureTerraformProject-VirtualNetwork"
          },
          "dependencies": [
            "azurerm_resource_group.AzureTerraformProjectRG",
            "azurerm_virtual_network.AzureTerraformProjectVNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "AzureTerraformProjectSGAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/virtualNetworks/AzureTerraformProject-VirtualNetwork/subnets/AzureTerraformProject-Subnet",
            "network_security_group_id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/AzureTerraformProject-SecurityGroup",
            "subnet_id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/virtualNetworks/AzureTerraformProject-VirtualNetwork/subnets/AzureTerraformProject-Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.AzureTerraformProjectSG",
            "azurerm_resource_group.AzureTerraformProjectRG",
            "azurerm_subnet.AzureTerraformProjectSubnet",
            "azurerm_virtual_network.AzureTerraformProjectVNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "AzureTerraformProjectVNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fe3c47cb-df7b-45ed-b31d-13ac4eeb531a",
            "id": "/subscriptions/61bf68b5-d547-4ff7-b283-f953894e41f3/resourceGroups/AzureTerraformProject-ResourceGroup/providers/Microsoft.Network/virtualNetworks/AzureTerraformProject-VirtualNetwork",
            "location": "eastus",
            "name": "AzureTerraformProject-VirtualNetwork",
            "resource_group_name": "AzureTerraformProject-ResourceGroup",
            "tags": {
              "environment": "Azure \u0026 Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.AzureTerraformProjectRG"
          ]
        }
      ]
    }
  ]
}